# podz

./: .gitignore  README.md
cli/: package-lock.json  package.json
cli/src/: api.ts  index.ts  utils.ts
cli/src/menus/: demo.ts  deployment.ts  index.ts  lease.ts  order.ts  payment.ts  provider.ts
client/: package.json  pnpm-lock.yaml
client/app/: globals.css  page.tsx
client/app/create/: page.tsx
client/app/dashboard/: page.tsx
client/app/deploy/: page.tsx
client/app/orderbook/: page.tsx
client/app/providers/: page.tsx
client/components/: active-lease-card.tsx  dashboard-header.tsx  deployment-card.tsx  order-bid-card.tsx  order-card.tsx  order-item.tsx  provider-bid-card.tsx  provider-card.tsx  provider-resource-chart.tsx
contracts/contracts/escrow/: Cargo.toml
contracts/contracts/escrow/src/: lib.rs  test.rs
contracts/contracts/escrow/test_snapshots/test/: test_constructor.1.json  test_deposit.1.json  test_full_escrow_lifecycle.1.json  test_lock_tokens.1.json  test_transfer_locked.1.json  test_unlock_insufficient_balance.1.json  test_unlock_tokens.1.json  test_update_provider_registry.1.json  test_withdraw.1.json  test_withdraw_insufficient_balance.1.json  test_withdraw_provider_earnings.1.json
contracts/contracts/order-book/: Cargo.toml
contracts/contracts/provider-rewards-calculator/: Cargo.toml
server/: Readme.md  package-lock.json  package.json  tsconfig.json
server/src/: config.ts  index.ts
server/src/api/: routes.ts
server/src/contracts/: client.ts  escrow.ts  order-book.ts  provider-registry.ts
server/src/services/: index.ts  (+5 more)
(+37 files in other folders)
